--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd backend && npm install && node ./src/server.js"
+    "heroku-prebuild": "cd backend && npm install",
+    "start": "cd backend && node ./src/server.js"
   },
   "author": "",
   "license": "ISC",
