--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -17,12 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.2
+  intl: ^0.15.7
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +47,9 @@ flutter:
       fonts:
         - asset: fonts/insanibc.ttf
         - asset: fonts/insanibu.ttf
+
+  assets:
+    - assets/dingdonglogo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
