Add suported platform logos on restaurant card

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,9 @@ flutter:
 
   assets:
     - assets/dingdonglogo.png
+    - assets/doordashlogo.jpg
+    - assets/skiplogo.png
+    - assets/ubereatslogo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
